--- a/Project_1B_ Project_GuillermoGarcia.ipynb
+++ b/Project_1B_ Project_GuillermoGarcia.ipynb
@@ -11,19 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Import Python packages "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/workspace\n"
+     ]
+    }
+   ],
    "source": [
     "# checking your current working directory\n",
     "print(os.getcwd())\n",
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6821\n"
+     ]
+    }
+   ],
    "source": [
     "# check the number of rows in your csv file\n",
     "with open('event_datafile_new.csv', 'r', encoding = 'utf8') as f:\n",
@@ -129,9 +138,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
+    "# Part II. Apache Cassandra portion of the project. \n",
     "\n",
-    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "## The CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -153,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Begin writing your Apache Cassandra code in the cells below"
+    "## Beginning of the Apache Cassandra code"
    ]
   },
   {
@@ -165,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,180 +192,299 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create Keyspace"
+    "#### Creating Keyspace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace "
+    "try:\n",
+    "    session.execute(\"\"\"\n",
+    "    CREATE KEYSPACE IF NOT EXISTS udacity\n",
+    "    WITH REPLICATION = \n",
+    "    {'class' : 'SimpleStrategy', 'replication_factor' : 1}\"\"\"\n",
+    ")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set Keyspace"
+    "#### Setting Keyspace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n"
+    "try:\n",
+    "    session.set_keyspace('udacity')\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
+    "### Now we need to create tables to run the following queries."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create queries to ask the following three questions of the data\n",
-    "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
-    "\n",
-    "\n",
-    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
-    "    \n",
-    "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n"
+    "### First Query:\n",
+    "#### Artist, song title and song's length in the music app history that was heard during sessionId = 338, and itemInSession = 4\n",
+    "For this query we will use the composite key with the _sessionId_ and _itemInSession_ which will allow us to query the results with specific values for those two variables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
-    "\n",
-    "\n",
-    "                    "
+    "query = \"CREATE TABLE IF NOT EXISTS artist_song_details \"\n",
+    "query = query + \"(sessionId int, itemInSession int, artist text, length float, song text, PRIMARY KEY (sessionId, itemInSession))\"\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) \n",
+    "    for line in csvreader:\n",
+    "        query = \"INSERT INTO artist_song_details (sessionId, itemInSession, artist, length, song)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s)\"\n",
+    "        \n",
+    "        session.execute(query, (int(line[8]), int(line[3]), line[0], float(line[5]), line[9]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Faithless Music Matters (Mark Knight Dub) 495.30731201171875\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"SELECT artist, song, length from artist_song_details WHERE sessionId = 338 AND itemInSession = 4\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print(row.artist, row.song, row.length)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Second Query:\n",
+    "#### Name of artist, song (sorted by itemInSession) and user (first and last name) which has and userid = 10 and for which the sessionId = 182\n",
+    "For this query we will use the composite key with the _userId_ and _sessionId_ to later filter the results for those specific values and also we will use _itemInSession_ as clustering column to avoid repetitions and to use the function ORDER BY."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
+    "query = \"CREATE TABLE IF NOT EXISTS song_playlist_session \"\n",
+    "query = query + \"(userId int, sessionId int, itemInSession int, artist text, song text, firstName text, lastName text, PRIMARY KEY ((userId, sessionId), itemInSession))\"\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"<ENTER INSERT STATEMENT HERE>\"\n",
-    "        query = query + \"<ASSIGN VALUES HERE>\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[#], line[#]))"
+    "        query = \"INSERT INTO song_playlist_session (userId, sessionId, itemInSession, artist, song, firstName, lastName)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
+    "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Down To The Bone Keep On Keepin' On Sylvie Cruz\n",
+      "Three Drives Greece 2000 Sylvie Cruz\n",
+      "Sebastien Tellier Kilometer Sylvie Cruz\n",
+      "Lonnie Gordon Catch You Baby (Steve Pitron & Max Sanna Radio Edit) Sylvie Cruz\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"SELECT artist, song, firstName, lastName from song_playlist_session WHERE userId = 10 AND sessionId = 182 ORDER BY itemInSession\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print(row.artist, row.song, row.firstname, row.lastname)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Do a SELECT to verify that the data have been inserted into each table"
+    "### Third Query:\n",
+    "#### User name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "For this query we will use the composite key with _song_ and _userId_. This way we can filter the query by _song_ and by using a composite key with the _userId_ in the PRIMARY KEY we will also prevent the query from overwrite the results, because by only using _song_ as a PRIMARY KEY we will not create a **unique PRIMARY KEY** (We need in our PRIMARY KEY both _song_ and _userId_)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table"
+    "query = \"CREATE TABLE IF NOT EXISTS user_song_library \"\n",
+    "query = query + \"(song text, userId int, firstName text, lastName text, PRIMARY KEY (song, userId))\"\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)                  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "        query = \"INSERT INTO user_song_library (song, userId, firstName, lastName)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s)\"\n",
+    "        session.execute(query, (line[9], int(line[10]), line[1], line[4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jacqueline Lynch\n",
+      "Tegan Levine\n",
+      "Sara Johnson\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"SELECT firstName, lastName, song from user_song_library WHERE song = 'All Hands Against His Own'\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "  \n",
+    "    \n",
+    "for row in rows:\n",
+    "    print(row.firstname, row.lastname)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
+    "### Drop the tables "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
-    "\n",
-    "\n",
-    "                    "
+    "query = \"DROP TABLE artist_song_details\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n",
-    "                    "
+    "query = \"DROP TABLE song_playlist_session\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Drop the tables before closing out the sessions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
+    "query = \"DROP TABLE user_song_library\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -367,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,9 +534,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
